bugfix/overflow y in page content

--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -135,6 +135,7 @@ header#desktop-header {
     position: relative;
     top: 10vh;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 @media (min-width: 992px) {
